Add in-memory statistics calculation